// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Format Snapshot Tests > HTML Format Snapshots > should generate HTML with proper table of contents structure > html-with-toc.html 1`] = `
"<!DOCTYPE html>
<html lang="en">
<head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Project Fusion - snapshot-test</title>
    <style>
        body { font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif; max-width: 1200px; margin: 0 auto; padding: 20px; }
        .header { border-bottom: 2px solid #eee; padding-bottom: 20px; margin-bottom: 30px; }
        .file-section { margin-bottom: 40px; border: 1px solid #ddd; border-radius: 8px; padding: 20px; }
        .file-title { background: #f5f5f5; margin: -20px -20px 20px -20px; padding: 15px 20px; border-radius: 8px 8px 0 0; }
        pre { background: #f8f9fa; padding: 15px; border-radius: 6px; overflow-x: auto; }
        code { font-family: 'Monaco', 'Menlo', 'Ubuntu Mono', monospace; }
        .toc { background: #f8f9fa; padding: 20px; border-radius: 8px; margin-bottom: 30px; }
        .toc ul { margin: 0; padding-left: 20px; }
        .toc a { text-decoration: none; color: #0366d6; }
        .toc a:hover { text-decoration: underline; }
    </style>
</head>
<body>
    <div class="header">
        <h1>Generated Project Fusion File</h1>
        <p><strong>Project:</strong> snapshot-test</p>
        <p><strong>Generated:</strong> [TIMESTAMP]</p>
        <p><strong>UTC:</strong> [UTC_TIMESTAMP]</p>
        <p><strong>Files:</strong> 5</p>
        <p><strong>Generated by:</strong> <a href="https://github.com/the99studio/project-fusion">project-fusion</a></p>
    </div>
    <div class="toc">
        <h2>📁 Table of Contents</h2>
        <ul>
            <li><a href="#api-posts-js">api/posts.js</a></li>
            <li><a href="#api-users-js">api/users.js</a></li>
            <li><a href="#components-footer-js">components/Footer.js</a></li>
            <li><a href="#components-header-js">components/Header.js</a></li>
            <li><a href="#utils-database-js">utils/database.js</a></li>
        </ul>
    </div>
    <div class="file-section" id="api-posts-js">
        <div class="file-title">
            <h2>📄 api/posts.js</h2>
        </div>
        <pre><code class="javascript">const posts = [];</code></pre>
    </div>

    <div class="file-section" id="api-users-js">
        <div class="file-title">
            <h2>📄 api/users.js</h2>
        </div>
        <pre><code class="javascript">const users = [];</code></pre>
    </div>

    <div class="file-section" id="components-footer-js">
        <div class="file-title">
            <h2>📄 components/Footer.js</h2>
        </div>
        <pre><code class="javascript">export default function Footer() {}</code></pre>
    </div>

    <div class="file-section" id="components-header-js">
        <div class="file-title">
            <h2>📄 components/Header.js</h2>
        </div>
        <pre><code class="javascript">export default function Header() {}</code></pre>
    </div>

    <div class="file-section" id="utils-database-js">
        <div class="file-title">
            <h2>📄 utils/database.js</h2>
        </div>
        <pre><code class="javascript">class Database {}</code></pre>
    </div>

</body>
</html>"
`;

exports[`Format Snapshot Tests > HTML Format Snapshots > should generate consistent HTML format for JavaScript files > javascript-files.html 1`] = `
"<!DOCTYPE html>
<html lang="en">
<head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Project Fusion - snapshot-test</title>
    <style>
        body { font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif; max-width: 1200px; margin: 0 auto; padding: 20px; }
        .header { border-bottom: 2px solid #eee; padding-bottom: 20px; margin-bottom: 30px; }
        .file-section { margin-bottom: 40px; border: 1px solid #ddd; border-radius: 8px; padding: 20px; }
        .file-title { background: #f5f5f5; margin: -20px -20px 20px -20px; padding: 15px 20px; border-radius: 8px 8px 0 0; }
        pre { background: #f8f9fa; padding: 15px; border-radius: 6px; overflow-x: auto; }
        code { font-family: 'Monaco', 'Menlo', 'Ubuntu Mono', monospace; }
        .toc { background: #f8f9fa; padding: 20px; border-radius: 8px; margin-bottom: 30px; }
        .toc ul { margin: 0; padding-left: 20px; }
        .toc a { text-decoration: none; color: #0366d6; }
        .toc a:hover { text-decoration: underline; }
    </style>
</head>
<body>
    <div class="header">
        <h1>Generated Project Fusion File</h1>
        <p><strong>Project:</strong> snapshot-test</p>
        <p><strong>Generated:</strong> [TIMESTAMP]</p>
        <p><strong>UTC:</strong> [UTC_TIMESTAMP]</p>
        <p><strong>Files:</strong> 2</p>
        <p><strong>Generated by:</strong> <a href="https://github.com/the99studio/project-fusion">project-fusion</a></p>
    </div>
    <div class="toc">
        <h2>📁 Table of Contents</h2>
        <ul>
            <li><a href="#app-js">app.js</a></li>
            <li><a href="#helpers-js">helpers.js</a></li>
        </ul>
    </div>
    <div class="file-section" id="app-js">
        <div class="file-title">
            <h2>📄 app.js</h2>
        </div>
        <pre><code class="javascript">// Simple Express application
const express = require(&#39;express&#39;);
const path = require(&#39;path&#39;);

const app = express();
const PORT = process.env.PORT || 3000;

// Middleware
app.use(express.json());
app.use(express.static(&#39;public&#39;));

// Routes
app.get(&#39;/&#39;, (req, res) =&gt; {
    res.sendFile(path.join(__dirname, &#39;index.html&#39;));
});

app.get(&#39;/api/health&#39;, (req, res) =&gt; {
    res.json({ status: &#39;ok&#39;, timestamp: new Date().toISOString() });
});

// Start server
app.listen(PORT, () =&gt; {
    console.log(\`Server running on http://localhost:\${PORT}\`);
});</code></pre>
    </div>

    <div class="file-section" id="helpers-js">
        <div class="file-title">
            <h2>📄 helpers.js</h2>
        </div>
        <pre><code class="javascript">// Helper functions
const crypto = require(&#39;crypto&#39;);

/**
 * Generate a random ID
 * @param {number} length - Length of the ID
 * @returns {string} Random ID
 */
function generateId(length = 8) {
    return crypto.randomBytes(length).toString(&#39;hex&#39;);
}

/**
 * Validate email format
 * @param {string} email - Email to validate
 * @returns {boolean} True if valid
 */
function isValidEmail(email) {
    const regex = /^[^s@]+@[^s@]+.[^s@]+$/;
    return regex.test(email);
}

module.exports = {
    generateId,
    isValidEmail
};</code></pre>
    </div>

</body>
</html>"
`;

exports[`Format Snapshot Tests > HTML Format Snapshots > should generate consistent HTML format with proper escaping > html-with-escaping.html 1`] = `
"<!DOCTYPE html>
<html lang="en">
<head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Project Fusion - snapshot-test</title>
    <style>
        body { font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif; max-width: 1200px; margin: 0 auto; padding: 20px; }
        .header { border-bottom: 2px solid #eee; padding-bottom: 20px; margin-bottom: 30px; }
        .file-section { margin-bottom: 40px; border: 1px solid #ddd; border-radius: 8px; padding: 20px; }
        .file-title { background: #f5f5f5; margin: -20px -20px 20px -20px; padding: 15px 20px; border-radius: 8px 8px 0 0; }
        pre { background: #f8f9fa; padding: 15px; border-radius: 6px; overflow-x: auto; }
        code { font-family: 'Monaco', 'Menlo', 'Ubuntu Mono', monospace; }
        .toc { background: #f8f9fa; padding: 20px; border-radius: 8px; margin-bottom: 30px; }
        .toc ul { margin: 0; padding-left: 20px; }
        .toc a { text-decoration: none; color: #0366d6; }
        .toc a:hover { text-decoration: underline; }
    </style>
</head>
<body>
    <div class="header">
        <h1>Generated Project Fusion File</h1>
        <p><strong>Project:</strong> snapshot-test</p>
        <p><strong>Generated:</strong> [TIMESTAMP]</p>
        <p><strong>UTC:</strong> [UTC_TIMESTAMP]</p>
        <p><strong>Files:</strong> 2</p>
        <p><strong>Generated by:</strong> <a href="https://github.com/the99studio/project-fusion">project-fusion</a></p>
    </div>
    <div class="toc">
        <h2>📁 Table of Contents</h2>
        <ul>
            <li><a href="#styles-css">styles.css</a></li>
            <li><a href="#template-html">template.html</a></li>
        </ul>
    </div>
    <div class="file-section" id="styles-css">
        <div class="file-title">
            <h2>📄 styles.css</h2>
        </div>
        <pre><code class="css">/* Global styles */
* {
    box-sizing: border-box;
}

body {
    margin: 0;
    padding: 0;
    font-family: -apple-system, BlinkMacSystemFont, &#39;Segoe UI&#39;, sans-serif;
    line-height: 1.6;
    color: #333;
}

.container {
    max-width: 1200px;
    margin: 0 auto;
    padding: 0 20px;
}

/* Button styles */
.btn {
    display: inline-block;
    padding: 12px 24px;
    background: #007bff;
    color: white;
    text-decoration: none;
    border-radius: 4px;
    transition: background 0.3s ease;
}

.btn:hover {
    background: #0056b3;
}

/* Responsive design */
@media (max-width: 768px) {
    .container {
        padding: 0 10px;
    }
    
    .btn {
        display: block;
        text-align: center;
        margin: 10px 0;
    }
}</code></pre>
    </div>

    <div class="file-section" id="template-html">
        <div class="file-title">
            <h2>📄 template.html</h2>
        </div>
        <pre><code class="html">&lt;!DOCTYPE html&gt;
&lt;html lang=&quot;en&quot;&gt;
&lt;head&gt;
    &lt;meta charset=&quot;UTF-8&quot;&gt;
    &lt;meta name=&quot;viewport&quot; content=&quot;width=device-width, initial-scale=1.0&quot;&gt;
    &lt;title&gt;Test Template&lt;/title&gt;
    &lt;style&gt;
        body {
            font-family: Arial, sans-serif;
            margin: 0;
            padding: 20px;
        }
        .container {
            max-width: 800px;
            margin: 0 auto;
        }
        .header {
            background: #f5f5f5;
            padding: 20px;
            border-radius: 8px;
        }
    &lt;/style&gt;
&lt;/head&gt;
&lt;body&gt;
    &lt;div class=&quot;container&quot;&gt;
        &lt;div class=&quot;header&quot;&gt;
            &lt;h1&gt;Welcome to Test App&lt;/h1&gt;
            &lt;p&gt;This is a &lt;strong&gt;test&lt;/strong&gt; application with &lt;em&gt;HTML&lt;/em&gt; content.&lt;/p&gt;
        &lt;/div&gt;
        
        &lt;main&gt;
            &lt;h2&gt;Features &amp; Benefits&lt;/h2&gt;
            &lt;ul&gt;
                &lt;li&gt;Fast &amp; reliable&lt;/li&gt;
                &lt;li&gt;Secure by design&lt;/li&gt;
                &lt;li&gt;Easy to use&lt;/li&gt;
            &lt;/ul&gt;
            
            &lt;p&gt;Contact us at: &lt;a href=&quot;mailto:test@example.com&quot;&gt;test@example.com&lt;/a&gt;&lt;/p&gt;
        &lt;/main&gt;
    &lt;/div&gt;
    
    &lt;script&gt;
        console.log(&#39;Page loaded successfully!&#39;);
        document.addEventListener(&#39;DOMContentLoaded&#39;, () =&gt; {
            console.log(&#39;DOM ready&#39;);
        });
    &lt;/script&gt;
&lt;/body&gt;
&lt;/html&gt;</code></pre>
    </div>

</body>
</html>"
`;

exports[`Format Snapshot Tests > Markdown Format Snapshots > should generate consistent markdown format for JavaScript files > javascript-files.md 1`] = `
"# Generated Project Fusion File

**Project:** snapshot-test

**Generated:** [TIMESTAMP]

**UTC:** [UTC_TIMESTAMP]

**Files:** 2

**Generated by:** [project-fusion](https://github.com/the99studio/project-fusion)

---

## 📁 Table of Contents

- [index.js](#index-js)
- [utils.js](#utils-js)

---

## 📄 index.js

\`\`\`javascript
// Main application entry point
const express = require('express');
const app = express();

app.get('/', (req, res) => {
    res.send('Hello, World!');
});

app.listen(3000, () => {
    console.log('Server running on port 3000');
});
\`\`\`

## 📄 utils.js

\`\`\`javascript
// Utility functions
function formatDate(date) {
    return date.toISOString().split('T')[0];
}

function capitalize(str) {
    return str.charAt(0).toUpperCase() + str.slice(1);
}

module.exports = { formatDate, capitalize };
\`\`\`

"
`;

exports[`Format Snapshot Tests > Markdown Format Snapshots > should generate consistent markdown format for TypeScript files > typescript-files.md 1`] = `
"# Generated Project Fusion File

**Project:** snapshot-test

**Generated:** [TIMESTAMP]

**UTC:** [UTC_TIMESTAMP]

**Files:** 2

**Generated by:** [project-fusion](https://github.com/the99studio/project-fusion)

---

## 📁 Table of Contents

- [service.ts](#service-ts)
- [types.ts](#types-ts)

---

## 📄 service.ts

\`\`\`typescript
// User service
import { User, CreateUserRequest, UserRole } from './types.js';

export class UserService {
    private users: User[] = [];
    private nextId = 1;

    createUser(request: CreateUserRequest): User {
        const user: User = {
            id: this.nextId++,
            name: request.name,
            email: request.email,
            createdAt: new Date()
        };
        
        this.users.push(user);
        return user;
    }

    findUser(id: number): User | undefined {
        return this.users.find(user => user.id === id);
    }
}
\`\`\`

## 📄 types.ts

\`\`\`typescript
// Type definitions
export interface User {
    id: number;
    name: string;
    email: string;
    createdAt: Date;
}

export type UserRole = 'admin' | 'user' | 'moderator';

export interface CreateUserRequest {
    name: string;
    email: string;
    role?: UserRole;
}
\`\`\`

"
`;

exports[`Format Snapshot Tests > Markdown Format Snapshots > should generate consistent markdown format for mixed file types > mixed-files.md 1`] = `
"# Generated Project Fusion File

**Project:** snapshot-test

**Generated:** [TIMESTAMP]

**UTC:** [UTC_TIMESTAMP]

**Files:** 3

**Generated by:** [project-fusion](https://github.com/the99studio/project-fusion)

---

## 📁 Table of Contents

- [config.json](#config-json)
- [README.md](#readme-md)
- [script.sh](#script-sh)

---

## 📄 config.json

\`\`\`json
{
  "name": "test-project",
  "version": "1.0.0",
  "dependencies": {
    "express": "^4.18.0",
    "typescript": "^5.0.0"
  },
  "scripts": {
    "start": "node index.js",
    "build": "tsc"
  }
}
\`\`\`

## 📄 README.md

\`\`\`markdown
# Test Project

This is a test project for snapshot testing.

## Features

- **Fast**: Built with performance in mind
- **Secure**: Follows security best practices
- **Reliable**: Comprehensive test coverage

## Installation

\`\`\`bash
npm install
npm start
\`\`\`

## License

MIT License
\`\`\`

## 📄 script.sh

\`\`\`bash
#!/bin/bash
# Deployment script

echo "Starting deployment..."

# Build the project
npm run build

# Run tests
npm test

# Deploy to production
echo "Deploying to production..."
rsync -av dist/ user@server:/var/www/app/

echo "Deployment complete!"
\`\`\`

"
`;
